; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/kern/extr_kern_synch.c_msleep0.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/kern/extr_kern_synch.c_msleep0.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@NSEC_PER_SEC = common dso_local global i32 0, align 4
@hz = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @msleep0(i8* %0, i32* %1, i32 %2, i8* %3, i32 %4, i32 (i32)* %5) #0 {
  %7 = alloca i8*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i8*, align 8
  %11 = alloca i32, align 4
  %12 = alloca i32 (i32)*, align 8
  %13 = alloca i32, align 4
  store i8* %0, i8** %7, align 8
  store i32* %1, i32** %8, align 8
  store i32 %2, i32* %9, align 4
  store i8* %3, i8** %10, align 8
  store i32 %4, i32* %11, align 4
  store i32 (i32)* %5, i32 (i32)** %12, align 8
  store i32 0, i32* %13, align 4
  %14 = load i32, i32* %11, align 4
  %15 = icmp ne i32 %14, 0
  br i1 %15, label %16, label %22

16:                                               ; preds = %6
  %17 = load i32, i32* %11, align 4
  %18 = load i32, i32* @NSEC_PER_SEC, align 4
  %19 = load i32, i32* @hz, align 4
  %20 = sdiv i32 %18, %19
  %21 = call i32 @clock_interval_to_deadline(i32 %17, i32 %20, i32* %13)
  br label %22

22:                                               ; preds = %16, %6
  %23 = load i8*, i8** %7, align 8
  %24 = ptrtoint i8* %23 to i32
  %25 = load i32, i32* %9, align 4
  %26 = load i8*, i8** %10, align 8
  %27 = load i32, i32* %13, align 4
  %28 = load i32 (i32)*, i32 (i32)** %12, align 8
  %29 = load i32*, i32** %8, align 8
  %30 = call i32 @_sleep(i32 %24, i32 %25, i8* %26, i32 %27, i32 (i32)* %28, i32* %29)
  ret i32 %30
}

declare dso_local i32 @clock_interval_to_deadline(i32, i32, i32*) #1

declare dso_local i32 @_sleep(i32, i32, i8*, i32, i32 (i32)*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
